# stanford-rna-3d-folding-2

./: .gitignore  LICENSE  README.md  check_gt.py  debug_8znq.py  debug_alignment.py  debug_alignment_9jgm.py  debug_db.py  debug_ml.py  list_db.py  pyproject.toml  requirements.txt  test_tm_score.py
notebooks/: kaggle_inference.py  phase2_breakthrough_pipeline.ipynb  stanford_rna_3d_complete.ipynb  ultimate_rna_pipeline.ipynb
rna_tbm/: __init__.py  alignment.py  cif_parser.py  cli.py  confidence.py  config.py  enhanced_pipeline.py  ensemble_pipeline.py  gap_filling.py  hybrid_pipeline.py  pipeline.py  submission.py  template_db.py
rna_tbm/embeddings/: __init__.py  cache.py  rna_fm.py  similarity.py
rna_tbm/functional/: __init__.py  functional_similarity.py  rfam_matcher.py
rna_tbm/metal_ions/: __init__.py  binding_sites.py  geometry.py  mgnet.py
rna_tbm/models/: __init__.py  contact_map.py  distance_geometry.py  distance_predictor.py  distance_to_coords.py  transformer_distance.py  trifold.py  trifold_lite.py  trifold_lite_ata_tba.py
rna_tbm/refinement/: __init__.py  refiner.py  torsion_model.py  torsion_to_coords.py
scripts/: build_training_db.py  compare_pipelines.py  debug_9g4j.py  debug_9g4j_deep.py  detect_self_hits.py  generate_ultimate_notebook.py  prepare_training_data.py  run_ensemble_validation.py  run_phase1_validation.py  run_validation.py  test_components.py  test_enhanced_pipeline.py  test_hybrid_pipeline.py  test_large_db.py  test_training_db_integration.py  train_distance_predictor.py  train_trifold_lite.py
tests/: test_enhancements.py  test_pipeline.py
